<resources>
    <string name="app_name">WebHawk</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="emptyText">Press the + to add a website to monitor.</string>

    <string name="add_website">Add website</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="url">URL</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="pref_key_check_interval_summary">Minutes between checking</string>
    <string name="pref_key_check_interval_title">Check interval</string>
    <string name="pref_key_check_interval">pref_key_check_interval</string>
    <string name="pref_key_vibrate">pref_key_vibrate</string>
    <string name="pref_key_vibrate_title">Vibrate</string>
    <string name="pref_key_check">pref_key_check</string>
    <string name="pref_key_check_title">Check automatically</string>
    <string name="pref_key_check_summaryOn">Check website availability regularly</string>
    <string name="pref_key_check_summaryOff">Only check website availability manually</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="checks">Checks</string>
    <string name="notifications">Notifications</string>
</resources>
