<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/checks"/>
    <SwitchPreference
        android:key="@string/pref_key_check"
        android:title="@string/pref_key_check_title"
        android:summaryOn="@string/pref_key_check_summaryOn"
        android:summaryOff="@string/pref_key_check_summaryOff"
        android:defaultValue="true"/>
    <EditTextPreference
        android:key="@string/pref_key_check_interval"
        android:summary="@string/pref_key_check_interval_summary"
        android:title="@string/pref_key_check_interval_title"
        android:inputType="number"
        android:defaultValue="60"/>

    <PreferenceCategory android:title="@string/notifications"/>
    <SwitchPreference
        android:key="@string/pref_key_vibrate"
        android:title="@string/pref_key_vibrate_title"
        android:defaultValue="true"/>
</PreferenceScreen>